--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
 html {
   font-size: 10px;
-  background:url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  /*background:url(http://i.imgur.com/b9r5sEL.jpg) bottom center;*/
   background-size: cover;
 }
 body,html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
+
+#drum-machine {
+  height: 400px;
+  width: 400px;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #D3D3D3;
+  border: 2px solid #908b85;
+  border-radius: 16px;
+  box-shadow: 7px 10px 34px 1px rgba(0, 0, 0, 0.68), inset -1px -6px 12px 0.1px #89847e;
+}
+
 
 .keys {
   display:flex;
-  flex:1;
-  min-height:100vh;
+  flex:.5;
+  flex-wrap: wrap;                     /* enable flex items to wrap */
+  min-height:50vh;
+  padding-top: 2rem;
   align-items: center;
   justify-content: center;
 }
@@ -24,7 +39,7 @@ body,html {
   font-size: 1.5rem;
   padding:1rem .5rem;
   transition:all .07s;
-  width:100px;
+  width:80px;
   text-align: center;
   color:white;
   background:rgba(0,0,0,0.4);
@@ -40,6 +55,7 @@ body,html {
 kbd {
   display: block;
   font-size: 40px;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .sound {
