--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
 html {
-  font-size: 10px;
-  /*background:url(http://i.imgur.com/b9r5sEL.jpg) bottom center;*/
+  font-size: 14px;
   background-size: cover;
 }
 body,html {
   margin: 0;
   padding: 0;
   font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
 }
 
 #drum-machine {
-  height: 400px;
-  width: 400px;
-  margin-top: 10%;
+  height: 420px;
+  width: 420px;
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
   background-color: #D3D3D3;
   border: 2px solid #908b85;
-  border-radius: 16px;
+  border-radius: 8px;
   box-shadow: 7px 10px 34px 1px rgba(0, 0, 0, 0.68), inset -1px -6px 12px 0.1px #89847e;
 }
 
@@ -27,7 +27,7 @@ body,html {
   flex:.5;
   flex-wrap: wrap;                     /* enable flex items to wrap */
   min-height:50vh;
-  padding-top: 2rem;
+  padding-bottom: .4rem;
   align-items: center;
   justify-content: center;
 }
